# VibeCodingIsFuture

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  webpack.config.js
src/rust/: Cargo.toml
src/rust/src/: lib.rs
src/web/: index.js  styles.css
